--- a/.github/workflows/pipeline-security-regression.yml
+++ b/.github/workflows/pipeline-security-regression.yml
@@ -210,7 +210,7 @@ jobs:
         
         gcc -Isrc -c test_pager_security.c -o test_pager_security.o
         gcc test_pager_security.o test_globals.o obj/security.o obj/utils.o obj/logging.o \
-          obj/auth.o obj/command.o obj/nss.o obj/sudoers.o obj/sssd.o \
+          obj/auth.o obj/command.o obj/nss.o obj/sudoers.o obj/sssd.o obj/sssd_replay_dev.o \
           obj/filelock.o obj/shell_enhancements.o obj/shell_env.o \
           obj/config.o obj/pipeline.o obj/ansible_detection.o obj/ai_detection.o \
           obj/dangerous_commands.o obj/editor_detection.o \
