ci: echo PAM detection in build and pipeline jobs (make print-pam-detection); show uname and CC before build; use pipeline script for smoke run

--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -77,6 +77,9 @@ jobs:
           brew install cppcheck || true
       - name: Build with WERROR${{ matrix.sanitize && format(' + SANITIZE={0}', matrix.sanitize) || '' }}
         run: |
+          echo "==> $(uname -s) $(uname -r) CC=$CC"
+          echo "==> Probing PAM availability..."
+          make -n print-pam-detection 2>/dev/null || true
           make clean
           if [ -n "${{ matrix.sanitize }}" ]; then
             make tests WERROR=1 SANITIZE=${{ matrix.sanitize }}
