fix(macos): provide portable clearenv fallback and use it; tests: flush fmemopen buffers before assert; ci(centos7): switch yum repos to vault.centos.org before install

--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -146,6 +146,8 @@ jobs:
             if [ "$PM" = dnf ]; then
               dnf -y install gcc make pam-devel which || (dnf -y install gcc-toolset-12-gcc gcc-toolset-12-gcc-c++ make pam-devel which || true)
             else
+              # CentOS 7 mirrors are EOL; switch to vault and install minimal toolchain
+              sed -i 's|mirrorlist=http://mirrorlist.centos.org.*|#mirrorlist disabled|g; s|#\?baseurl=http://mirror.centos.org/centos/|baseurl=http://vault.centos.org/centos/|g' /etc/yum.repos.d/CentOS-*.repo || true
               yum -y install gcc make pam-devel which || true
             fi
             make clean
