--- a/.github/workflows/build-matrix.yml
+++ b/.github/workflows/build-matrix.yml
@@ -127,7 +127,7 @@ jobs:
       fail-fast: false
       matrix:
         include:
-          - container: centos:7
+          - container: centos:7.9.2009
             pm: yum
           - container: almalinux:8.9
             pm: dnf
@@ -148,7 +148,7 @@ jobs:
             else
               # CentOS 7 mirrors are EOL; switch to vault and install minimal toolchain
               echo '--- BEFORE repo file head ---' && head -n 20 /etc/yum.repos.d/CentOS-Base.repo || true
-              sed -i 's|mirrorlist=http://mirrorlist.centos.org.*|#mirrorlist disabled|g; s|#\?baseurl=http://mirror.centos.org/centos/|baseurl=http://vault.centos.org/centos/|g' /etc/yum.repos.d/CentOS-*.repo || true
+              sed -i 's|mirrorlist=http://mirrorlist.centos.org.*|#mirrorlist disabled|g; s|#\?baseurl=http://mirror.centos.org/centos/|baseurl=http://vault.centos.org/7.9.2009/os/$basearch/|g' /etc/yum.repos.d/CentOS-*.repo || true
               echo '--- AFTER repo file head ---' && head -n 20 /etc/yum.repos.d/CentOS-Base.repo || true
               yum -y install gcc make pam-devel which || true
             fi
